# embedded

./: CMakeLists.txt  FREERTOS_PLUE.jdebug  FreeRTOS_PLUS.code-workspace  STM32F407VGTx_FLASH.ld
.eide/: eide.yml  files.options.yml
app/: board.c  cmd.c  main.c  rtos.s
app/inc/: board.h  usart.h
boot/: boot.code-workspace
boot/.eide/: eide.yml
boot/app/: board.c  cmd.c  main.c  syscalls.c
boot/app/inc/: usart.h
boot/driver/: bootloader.c  key.c  led.c  usart.c
boot/driver/inc/: key_desc.h  led.h
boot/fireware/cmsis/device/: stm32f4xx_it.c  system_stm32f4xx.c
driver/: boot.c  led.c  usart.c
driver/inc/: key.h  led.h  led_desc.h
fireware/cmsis/device/: stm32f4xx_it.c
third_lib/freertos/portable/: FreeRTOSConfig.h  port.c
third_lib/letter_shell/: shell_cfg.h  shell_cmd_list.c
uos/inc/: uos_list.h  uos_task.h
uos/src/: uos_list.c  uos_task.c
